use prefilled email template; add button to top

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@ layout: homepage
 		<ul class="actions">
 			<li><a href="#theissue" class="button large wide smooth-scroll-top-navbar-offset"><b>Learn More</b></a></li>
 			<li><a href="screens/take_action.html" class="button large wide smooth-scroll-top-navbar-offset"><b>Take Action</b></a></li>
+			<li><a href="http://tinyurl.com/saveumnmenstf" target="_blank" class="button large wide">Email all regents with a prefilled template</a></li>
 		</ul>
 	</div>
 </section>
