--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -58,8 +58,7 @@ layout: base
         </p>
 
         <ul class="actions stacked">
-            <li><a href="mailto:kpowell@umn.edu,sviggum@umn.edu,tja@umn.edu,rbeeson@umn.edu,mdavenpo@umn.edu,kliher@umn.edu,hsu@umn.edu,kenyanya@umn.edu,mayeron@umn.edu,kliher@umn.edu,hsu@umn.edu,kenyanya@umn.edu,savegophertf@gmail.com"
-                    target="_blank" class="button big wide smooth-scroll-middle">Email all regents</a></li>
+            <li><a href="http://tinyurl.com/saveumnmenstf" target="_blank" class="button big wide">Email all regents with a prefilled template</a></li>
         </ul>
 
         <table>
