--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -58,7 +58,7 @@ layout: base
         </p>
 
         <ul class="actions stacked">
-            <li><a href="http://tinyurl.com/saveumnmenstf" target="_blank" class="button big wide">Email all regents with a prefilled template</a></li>
+            <li><a href="http://tinyurl.com/saveumnmenstf" target="_blank" class="button big wide">Pre-filled Email To All Regents</a></li>
         </ul>
 
         <table>
