--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -138,21 +138,21 @@ layout: base
                 <tr class="table-row-maroon">
                     <td>David J. McMillan</td>
                     <td>Board of Regent Member</td>
-                    <td>kliher@umn.edu</td>
+                    <td>dmcmillan@umn.edu</td>
                     <td>612-624-6608</td>
                     <td><a href=https://regents.umn.edu/david-j-mcmillan target='_'>Link</a></td>
                 </tr>
                 <tr>
                     <td>Darrin M. Rosha</td>
                     <td>Board of Regent Member</td>
-                    <td>hsu@umn.edu</td>
+                    <td>drosha@umn.edu</td>
                     <td>612-624-6608</td>
                     <td><a href=https://regents.umn.edu/darrin-m-rosha target='_'>Link</a></td>
                 </tr>
                 <tr class="table-row-maroon">
                     <td>Randy R. Simonson</td>
                     <td>Board of Regent Member</td>
-                    <td>kenyanya@umn.edu</td>
+                    <td>rrs@umn.edu</td>
                     <td>605-553-2232</td>
                     <td><a href=https://regents.umn.edu/randy-r-simonson target='_'>Link</a></td>
                 </tr>
