--- a/index.html
+++ b/index.html
@@ -211,6 +211,29 @@ layout: homepage
 		</div>
 	</section>
 
+	<!-- Make a pledge -->
+	<section class="spotlight style1 orient-right content-align-left image-position-center onscroll-image-fade-in" id="pledge">
+		<div class="content">
+			<h2>Pledge to #savegophertf</h2>
+			<p>
+				Legendary Coach Roy Griak often told his teams Malo po malo, a serbian saying from his mother meaning "little by little." Small improvements in practice add up over time to create great performances. This slogan, this motto, is what
+				drives our formal support too, our fundraising.
+				<br></br>
+				We are asking for 5-year commitments, where you would support the teams operations fund for the same amount each year. This would be considered a verbal pledge, that is documented yet revocable. Your name and your amount will remain
+				fully anonymous, unless you want it published.
+				<br></br>
+				In discussions with the Regents, the theme of providing a financial solution has been consistently mentioned. This initiative is our opportunity to come back to the Regents to show them we are Driven to Discover. 120 years of track
+				and field excellence is on the line. We are on our final attempt, in the homestretch. Let’s show that when our backs are up against the wall, we are Snotty Nose Tough and ready to chip in Malo po malo.
+			</p>
+			<ul class="actions stacked">
+				<li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSc8vm4DcMjxb4NwzG8daZAJ5Nd2wLNGkSdn2U4uFHs-_Lpttw/viewform" class="button large">Make a Pledge</a></li>
+			</ul>
+		</div>
+		<div class="image">
+			<img src="images/pledge.jpg" alt="" />
+		</div>
+	</section>
+
 	<!-- Contact -->
 	<section class="wrapper style1 align-center" id="contact">
 		<div class="inner medium">
