--- a/screens/testimonials/adamsteele.html
+++ b/screens/testimonials/adamsteele.html
@@ -27,7 +27,7 @@ image: "/images/testimonials/asteele.jpg"
             <br></br>
             The university value of "if we can dream it, we can do it" was instilled in me to the core. I believe that reinstating men's track and field is something we CAN do, together.
             <br></br>
-            UNITED WE ARE.
+            UNITED ARE WE.
         </p>
     </div>
 </section>
