--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -23,7 +23,7 @@ layout: base
             </ol>
         </h3>
         <br></br>
-        <h3>Share our message on social media</h3>
+        <h3><u>Share our message on social media</u></h3>
         <p>
             Use our hashtag #savegophertf to voice your opinion about this decision.
             <br />
@@ -53,7 +53,7 @@ layout: base
             Like, share and comment on our content to increase visibility. Use with the hashtag <b>#savegophertf</b> to voice your opinion about this decision. -->
 
         </p>
-        <h3 id="pledge">Make a financial pledge</h3>
+        <h3 id="pledge"><u>Make a financial pledge</u></h3>
         <p>
             We are asking for 5-year commitments, where you would support the teams operations fund for the same amount each year. This would be considered a verbal pledge, that is documented yet revocable. Your name and your amount will remain
             fully anonymous, unless you want it published. This verbal commitment is documented yet revocable.
@@ -61,7 +61,7 @@ layout: base
         <ul class="actions stacked">
             <li><a target="_blank" href="https://docs.google.com/forms/d/e/1FAIpQLSc8vm4DcMjxb4NwzG8daZAJ5Nd2wLNGkSdn2U4uFHs-_Lpttw/viewform" class="button large">Make a Pledge</a></li>
         </ul>
-        <h3 id="regents">Call/email the regents</h3>
+        <h3 id="regents"><u>Call/email the regents</u></h3>
         <p>
             The Board of Regents are the main group we are attempting to educate. The Board of Regents will decide whether to approve the proposal to cut Men’s Track and Field on October 9, 2020 at their Full Board Meeting, beginning around 9 am
             CST.
