--- a/screens/take_action.html
+++ b/screens/take_action.html
@@ -31,11 +31,7 @@ layout: base
             <br />
             Like, share and comment on our content to increase visibility.
             <br></br>
-            <!-- <a href="https://www.change.org/p/university-of-minnesota-reinstate-university-of-minnesota-s-men-s-track-field-program?recruiter=1095771630&utm_campaign=petition_published_onboarding_0&utm_medium=facebook&utm_source=share_petition&fbclid=IwAR09iaaDchfQYIfbWtzo1KA"
-                target="_blank">
-                <b>Sign our petition</b>
-            </a> to reinstate Minnesota Men's Track and field and join over 25,000 athletes, alumni, and community members who feel wronged by this decision and believe in our program.
-        </p>
+            <!-- </p>
         <p>
             We encourage you to submit a testimonial to be featured on this site to share your experience with Minnesota Track and Field. You can do so by filling out <a href="https://forms.gle/Uy5eAUDZi3L96od76" target="_blank"><b>our google
                     form</b></a>.
@@ -48,6 +44,13 @@ layout: base
             Follow us on <a href=https://www.instagram.com/savegophertf/ target="_blank"><b>Instagram</b></a>.
             <br />
             Like us on <a href=https://www.facebook.com/groups/634286233941618/ target="_blank"><b>Facebook</b></a>.
+            <br />
+            Check out our <a href=https://linktr.ee/reinstateumnmenstf><b>Linktree</b></a>.
+            <br />
+            <a href="https://www.change.org/p/university-of-minnesota-reinstate-university-of-minnesota-s-men-s-track-field-program?recruiter=1095771630&utm_campaign=petition_published_onboarding_0&utm_medium=facebook&utm_source=share_petition&fbclid=IwAR09iaaDchfQYIfbWtzo1KA"
+                target="_blank">
+                <b>Sign our petition</b>
+            </a> to reinstate Minnesota Men's Track and field and join over 25,000 athletes, alumni, and community members who feel wronged by this decision and believe in our program.
             <br />
             <!-- and subscribe to our <a href="https://www.youtube.com/playlist?list=PL2378DE30A35C53F0" target="_blank"><b>YouTube channel</b></a>.
             Like, share and comment on our content to increase visibility. Use with the hashtag <b>#savegophertf</b> to voice your opinion about this decision. -->
